[package]
name = "meetmerger"
version = "0.1.0"
edition = "2021"
description = "Ingest Swimtopia Meet Maestro heat sheets and recombine heats to maximize pool lane usage."
license = "GPLv3"

[dependencies]
pdf-extract = "0.7"
clap = { version = "4", features = ["derive"] }
regex = "1"
iced = "0.14"
rfd = "0.17"
printpdf = "0.11"
