[package]
name = "meetmerger"
version = "0.7.0"
edition = "2021"
description = "Ingest heat sheets and recombine heats to maximize pool lane usage."
license = "GPLv3"

[dependencies]
pdf-extract = "0.12"
csv = "1.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
iced = "0.14"
rfd = "0.17"
printpdf = "0.11"
